--- a/settings.ini
+++ b/settings.ini
@@ -1,17 +1,17 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
+lib_name = zindi_hackathon_vaccinate
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = fastai
-# description = A description of your project
+user = manisnesan
+description = My Solution and Submission to the zindi hackathon to-vaccinate-or-not-to-vaccinate https://zindi.africa/hackathons/to-vaccinate-or-not-to-vaccinate-its-not-a-question 
 # keywords = some keywords
-# author = Your Name
+author = Manikandan Sivanesan
 # author_email = email@example.com
-# copyright = Your Name or Company Name
+copyright = Manikandan Sivanesan
 branch = master
 version = 0.0.1
 min_python = 3.6
